// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Score /> Error story renders snapshot 1`] = `
<span
  class="text text--sm text--bold-weight tag tag--neutral tag--outline score score--error"
>
  <span
    class="tag__body"
  >
    6 / 10
  </span>
</span>
`;

exports[`<Score /> Neutral story renders snapshot 1`] = `
<span
  class="text text--sm text--bold-weight tag tag--neutral tag--outline score score--neutral"
>
  <span
    class="tag__body"
  >
    6 / 10
  </span>
</span>
`;

exports[`<Score /> Success story renders snapshot 1`] = `
<span
  class="text text--sm text--bold-weight tag tag--neutral tag--outline score score--success"
>
  <span
    class="tag__body"
  >
    91 / 100
  </span>
</span>
`;
